# power-bi-usage-monitor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: dashboard-blueprint.md
src/powerbi_usage_monitor/: __init__.py  __main__.py  api.py  config.py  pipeline.py  postgres.py  storage.py
tests/: test_core.py
